--- a/public/compute.html
+++ b/public/compute.html
@@ -10,14 +10,14 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://resurrexi.io/">
-    <meta property="og:title" content="Resurrexi Labs - Adversarial Systems Research">
-    <meta property="og:description" content="Computational research in adversarial AI systems, political economy, infrastructure engineering">
+    <meta property="og:title" content="Resurrexi Labs - Research Infrastructure">
+    <meta property="og:description" content="Research infrastructure for adversarial systems analysis - distributed computing, autonomous agents">
     <meta property="og:image" content="https://resurrexi.io/static/images/logo.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Resurrexi Labs - Adversarial Systems Research">
-    <meta name="twitter:description" content="Computational research in adversarial AI systems, political economy, infrastructure engineering">
+    <meta name="twitter:title" content="Resurrexi Labs - Research Infrastructure">
+    <meta name="twitter:description" content="Research infrastructure for adversarial systems analysis">
 
     <!-- Canonical -->
     <link rel="canonical" href="https://resurrexi.io/">
@@ -30,7 +30,7 @@
       "name": "Resurrexi Labs",
       "url": "https://resurrexi.io",
       "logo": "https://resurrexi.io/static/images/logo.png",
-      "description": "Computational research infrastructure for adversarial AI systems, political economy, infrastructure engineering",
+      "description": "Research infrastructure for adversarial systems analysis - distributed computing, autonomous agents, computational experiments",
       "parentOrganization": {
         "@type": "ResearchOrganization",
         "name": "Farzulla Research",
@@ -51,7 +51,7 @@
         "https://github.com/resurrexio",
         "https://resurrexi.dev"
       ],
-      "knowsAbout": ["Adversarial AI", "Distributed Systems", "Offensive Security", "Political Economy", "Computational Psychology"]
+      "knowsAbout": ["Distributed Systems", "Adversarial AI", "Autonomous Agents", "Infrastructure Engineering", "Computational Research"]
     }
     </script>
 
@@ -69,16 +69,16 @@
             <ul>
                 <li>
                     <a href="/" class="logo">
-                        <img src="/static/images/logo.png" alt="Resurrexi Labs" height="40">
+                        <img src="/static/images/logo.png" alt="Resurrexi Labs">
                         <strong>Resurrexi Labs</strong>
                     </a>
                 </li>
             </ul>
             <ul>
-                <li><a href="/publications.html">Publications</a></li>
-                <li><a href="/work.html">Technical Work</a></li>
-                <li><a href="/compute.html">Compute</a></li>
+                <li><a href="/infrastructure.html">Infrastructure</a></li>
+                <li><a href="/experiments.html">Experiments</a></li>
                 <li><a href="/about.html">About</a></li>
+                <li><a href="https://farzulla.org" target="_blank">Research</a></li>
                 <li><a href="https://resurrexi.dev" target="_blank">Lab Docs</a></li>
             </ul>
         </nav>
@@ -289,24 +289,19 @@ document.getElementById('compute-interest-form').addEventListener('submit', asyn
     </main>
 
     <footer class="container">
-        <hr>
-        <p>
-            <strong>Research Areas:</strong> Adversarial AI Systems · Political Economy · Computational Psychology · Infrastructure Engineering
+        <div class="footer-links">
+            <a href="/infrastructure.html">Infrastructure</a>
+            <a href="/experiments.html">Experiments</a>
+            <a href="/about.html">About</a>
+            <a href="https://farzulla.org" target="_blank">Farzulla Research</a>
+            <a href="https://resurrexi.dev" target="_blank">Lab Docs</a>
+            <a href="https://github.com/resurrexio" target="_blank">GitHub</a>
+        </div>
+        <p class="footer-meta">
+            7-node K3s cluster · 58 cores · 168GB RAM · 40GB VRAM
         </p>
         <p>
-            <a href="https://farzulla.org">Research Portfolio</a> ·
-            <a href="https://farzulla.com">Personal Site</a> ·
-            <a href="https://github.com/resurrexio">GitHub (Technical)</a> ·
-            <a href="https://github.com/studiofarzulla">GitHub (Academic)</a> ·
-            <a href="https://orcid.org/0009-0002-7164-8704">ORCID</a> ·
-            <a href="https://www.researchgate.net/profile/Murad-Farzulla">ResearchGate</a> ·
-            <a href="https://kcl.academia.edu/MuradFarzulla">Academia.edu</a>
-        </p>
-        <p>
-            <small>7-node K3s cluster · 58 cores · 168GB RAM · 40GB VRAM</small>
-        </p>
-        <p>
-            <small>&copy; 2025 Murad Farzulla · CC-BY-4.0</small>
+            <small>&copy; 2025 Resurrexi Labs · <a href="mailto:murad@farzulla.org">murad@farzulla.org</a></small>
         </p>
     </footer>
 </body>
