feat(content): add team member and missing papers

--- a/public/about.html
+++ b/public/about.html
@@ -155,6 +155,15 @@
         </article>
 
         <article class="cta-card" style="text-align: left;">
+            <div class="card-header">Technical Engineer</div>
+            <h3>Andrew Maksakov</h3>
+            <p>
+                Childhood friend and hardware specialist. Joined the lab for access to the 80B parameter models. 
+                Will debug infrastructure for GPU time.
+            </p>
+        </article>
+
+        <article class="cta-card" style="text-align: left;">
             <div class="card-header">System Architect</div>
             <h3 class="text-teal">Entropy</h3>
             <p>
