--- a/public/experiments.html
+++ b/public/experiments.html
@@ -283,6 +283,38 @@
             <a href="/static/papers/Farzulla_2025_Asymptotic_Protection_v1.0.0.pdf" target="_blank" class="btn">Download PDF</a>
         </p>
     </article>
+
+    <article class="experiment-card status-complete">
+        <div class="card-header">
+            <span>Published</span>
+            <span class="text-mono">Aug 2025</span>
+        </div>
+        <h3>Genre Mimicry in Abliterated LLMs</h3>
+        <p class="tagline">Style transfer without safety filters</p>
+        <p>
+            Analysis of stylistic flexibility in models with removed safety-tuning, demonstrating 
+            superior genre adaptation capability.
+        </p>
+        <p class="mt-2">
+            <a href="https://farzulla.org/articles/genre-mimicry-abliterated-llms.html" target="_blank" class="btn">Read Article</a>
+        </p>
+    </article>
+
+    <article class="experiment-card status-complete">
+        <div class="card-header">
+            <span>Published</span>
+            <span class="text-mono">Jul 2025</span>
+        </div>
+        <h3>Statistical Alpha Asymmetries in EUR/JPY</h3>
+        <p class="tagline">Market inefficiency in forex crosses</p>
+        <p>
+            Identification of persistent alpha generation opportunities in EUR/JPY during 
+            high-volatility Asian trading sessions.
+        </p>
+        <p class="mt-2">
+            <a href="https://farzulla.org/articles/alpha-asymmetry-forex-analysis.html" target="_blank" class="btn">Read Article</a>
+        </p>
+    </article>
 </section>
 
     </main>
